<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="all_image">All Images</string>
    <string name="choose">选取</string>
    <string name="done">Done</string>
    <string name="done_num">Done(%1$s/%2$s)</string>
    <string name="message_max_num">Up to %1$s photos can be selected</string>
    <string name="num_postfix">%1$s</string>
    <string name="picture">Images</string>
    <string name="preview">Preview</string>
    <string name="preview_num">Preview(%1$s)</string>
    <string name="save_ing">Saving picture…</string>
    <string name="take_picture">Take Photo</string>
    <string name="use">OK</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to this device.</string>
    <string name="VideoView_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="action_settings">Settings</string>
    <string name="action_update_version_negative">稍后更新</string>
    <string name="action_update_version_positive">马上更新</string>
    <string name="add">添加</string>
    <string name="advanced_team">高级群</string>
    <string name="app_name">农技耘</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">取消</string>
    <string name="cancel_team_admin">取消管理员</string>
    <string name="capture_video_size_in_kb">视频文件大小为: %1$dKB,</string>
    <string name="capture_video_size_in_mb">视频文件大小为: %1$.2fMB,</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat_setting">聊天信息</string>
    <string name="check_fail">验证失败</string>
    <string name="choose_from_photo_album">从手机相册选择</string>
    <string name="clear_empty">清空</string>
    <string name="click_set">点击设置</string>
    <string name="close">关闭</string>
    <string name="connect_vedio_device_fail">无法连接视频设备 ，请稍候再试</string>
    <string name="contact_selector">联系人选择器</string>
    <string name="copy_has_blank">复 制</string>
    <string name="create">新建</string>
    <string name="create_advanced_team">创建高级群</string>
    <string name="create_team">创建群</string>
    <string name="create_team_failed">创建失败</string>
    <string name="create_team_success">创建成功</string>
    <string name="crop">裁剪</string>
    <string name="delete_has_blank">删 除</string>
    <string name="dialog_login_now">正在登录中...</string>
    <string name="dismiss_team">解散本群</string>
    <string name="dismiss_team_failed">解散群失败</string>
    <string name="dismiss_team_success">群已解散</string>
    <string name="download_picture_fail">图片下载失败</string>
    <string name="download_progress_description">%1$s（%2$s/%3$s）</string>
    <string name="download_video">正在下载视频</string>
    <string name="download_video_fail">视频下载失败,请重试</string>
    <string name="edit">编辑</string>
    <string name="empty" />
    <string name="error_view_load_error_click_to_refresh">"内容加载失败
点击重新加载"</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="exchange_page_bar_btn_release">发布</string>
    <string name="expert_count_tx">问题: %1$s</string>
    <string name="expert_email_tx">邮箱: %1$s</string>
    <string name="expert_major_tx">专业方向: %1$s</string>
    <string name="expert_title_tx">职称: %1$s</string>
    <string name="expert_unit_tx">单位: %1$s</string>
    <string name="file_transfer_state_downloaded">已下载</string>
    <string name="file_transfer_state_undownload">未下载</string>
    <string name="forward_to_person">转发到个人</string>
    <string name="forward_to_team">转发到群组</string>
    <string name="fts_enable">全文检索(FTS4)</string>
    <string name="fts_prefix_hit">前缀匹配高亮检索结果</string>
    <string name="g_font_file">@null</string>
    <string name="gallery_invalid">你的手机没有图库程序</string>
    <string name="gallery_save_file_failed">存储失败!</string>
    <string name="gallery_save_file_not_have_external_storage">没有外部存储!</string>
    <string name="gallery_save_file_success">保存成功!</string>
    <string name="hello_world">Hello world!</string>
    <string name="home_menu_exchange">交流</string>
    <string name="home_menu_index">首页</string>
    <string name="home_menu_me">我的</string>
    <string name="home_menu_questions">快速提问</string>
    <string name="home_menu_think_tank">知识库</string>
    <string name="idea_author_tx">作者: %1$s</string>
    <string name="iknow">知道了</string>
    <string name="im_choose_pic">请选择JPG PNG BMP GIF格式的图片文件</string>
    <string name="im_choose_video">请选择3GP MP4格式的视频文件</string>
    <string name="im_choose_video_file_size_too_large">视频文件过大，系统限制为20MB</string>
    <string name="image_compressed_size">该原始图片大小为: %1$s,</string>
    <string name="image_select_opt_done">完成</string>
    <string name="image_select_opt_preview">预览</string>
    <string name="image_show_error">图片显示异常</string>
    <string name="index_hint_integral">恭喜您获得%1$s积分</string>
    <string name="index_notice_title">通知</string>
    <string name="init_decoders">Initializing decoders...</string>
    <string name="input_hint">请输入%1$s</string>
    <string name="input_panel_image">图 片</string>
    <string name="input_panel_location">位 置</string>
    <string name="input_panel_photo">拍 照</string>
    <string name="input_panel_take">拍 摄</string>
    <string name="input_panel_video">视 频</string>
    <string name="invite_member">邀请成员</string>
    <string name="invite_member_failed">邀请成员失败</string>
    <string name="invite_member_success">邀请成员成功</string>
    <string name="is_send_image">是否发送该原始图片？</string>
    <string name="is_send_multi_image">是否发送这些原始图片？</string>
    <string name="is_send_video">是否发送该视频？</string>
    <string name="label_declaration_statement">"\u0009\u0009\u0009新型职业农民培育工程自2014年起由农业部、财政部共同启动实施，着力培养一支有文化、懂技术、会经营的新型职业农民队伍，为发展现代农业提供强有力的人才支撑。
 \u0009\u0009\u0009新型职业农民培育工程主要培育“现代青年农场主”、“新型农业经营主体带头人（生产经营型职业农民）”、“专业技能型职业农民”和“专业服务型职业农民”。请根据个人实际情况选择一种类型进行申报，选择后页面直接跳转至与所选类型相对应的申请页面。如无法确定具体类型，请与当地农业主管部门取得联系。
 \u0009\u0009\u0009现代青年农场主是指具有一定产业基础，高中及以上学历（或相当于高中），年龄在18-45周岁之间的种养大户、家庭农场经营者、农民合作社骨干、返乡创业大学生、中高职毕业生、返乡农民工和退伍军人等。
 \u0009\u0009\u0009新型农业经营主体带头人（生产经营型职业农民）是指以农业为职业、占有一定的资源、具有一定的专业技能、有一定的资金投入能力，收入主要来自农业生产经营并达到相当水平的现代农业生产经营者，主要是专业大户、家庭农场经营者、农民合作社带头人等。
 \u0009\u0009\u0009专业技能型职业农民是指在农民合作社、家庭农场、专业大户、农业企业等新型农业经营主体中较为稳定地从事农业岗位作业，并以此为主要收入来源且达到相当水平，具有一定专业技能的农业劳动力，主要是农业工人或农业雇员等。
 \u0009\u0009\u0009专业服务型职业农民是指在社会化服务组织中或个体直接从事农业产前、产中、产后服务，并以此为主要收入来源且达到相当水平，具有相应服务能力的农业社会化服务人员，主要是农村信息员、农村经纪人、农机服务人员、统防统治植保员、村级动物防疫员等农业社会化服务人员。
 \u0009\u0009\u0009信息填报过程中可进行保存，确认无误后方可提交，提交完成后个人信息将无法修改。"</string>
    <string name="load_fail">加载失败</string>
    <string name="loading">加载中…</string>
    <string name="loading_no_more">已加载全部</string>
    <string name="login_fail">登录失败</string>
    <string name="login_tag">"点击\"登录\"即表示您同意
《农技耘APP免责申明》"</string>
    <string name="look_up_original_photo_format">查看原图（%s）</string>
    <string name="look_video_fail">无法播放该视频</string>
    <string name="look_video_fail_try_again">暂时无法播放视频，请重试</string>
    <string name="main_msg_list_clear_sticky_on_top">取消置顶</string>
    <string name="main_msg_list_delete_chatting">删除该聊天</string>
    <string name="main_msg_list_sticky_on_top">置顶该聊天</string>
    <string name="me_page_about_title">关于</string>
    <string name="me_page_answer_title">我的回答</string>
    <string name="me_page_collect_title">我的收藏</string>
    <string name="me_page_profile_title">我的资料</string>
    <string name="me_page_question_title">我的提问</string>
    <string name="me_page_system_title">系统设置</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="memory_out">内存不足</string>
    <string name="menu">菜单</string>
    <string name="message_search_no_result">无结果</string>
    <string name="message_search_title">查看聊天内容</string>
    <string name="msg_check_version_fail">检查版本失败,请重试!</string>
    <string name="msg_person_info_update">个人信息有修改,是否保存?</string>
    <string name="msg_search">全文检索</string>
    <string name="msg_search_limit">全文检索显示条数</string>
    <string name="msg_type_audio">语音</string>
    <string name="msg_type_image">图片</string>
    <string name="msg_version_update">"最新版本号:%1$s
%2$s"</string>
    <string name="multi_image_compressed_size">原始图片总大小为: %1$s,</string>
    <string name="mute_msg">设置禁言</string>
    <string name="my_team_card">我的群名片</string>
    <string name="net_http_error">服务器异常!</string>
    <string name="net_timeout">连接超时!</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="no_permission">没有权限</string>
    <string name="normal_team">讨论组</string>
    <string name="normal_team_invalid_tip">您已退出该讨论组</string>
    <string name="normal_team_name">讨论组名称</string>
    <string name="normal_team_not_exist">该讨论组不存在</string>
    <string name="record_audio">按住 说话</string>
    <string name="send">发送</string>
    <string name="unsupport_desc">客户端版本不支持该内容</string>
    <string name="unsupport_title">无法显示该内容</string>
    <string name="user_btn_code">获取验证码</string>
    <string name="user_btn_finish">完成</string>
    <string name="user_btn_next">下一步</string>
    <string name="user_forget_password_btn">忘记密码?</string>
    <string name="user_hint_code">请输入验证码</string>
    <string name="user_hint_pass">请输入密码</string>
    <string name="user_hint_phone">请输入手机号</string>
    <string name="user_hint_sure_pass">请再次输入密码</string>
    <string name="user_login_title">登录</string>
</resources>