<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/message_item_unsupport_container" android:background="@drawable/nim_message_item_round_bg" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/message_item_unsupport_image" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginLeft="10.0dip" android:src="@drawable/nim_unsupport_mime_type" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/empty" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginRight="4.0dip" android:layout_toRightOf="@id/message_item_unsupport_image" android:layout_centerVertical="true">
        <TextView android:textSize="16.0sp" android:textColor="@color/color_black_333333" android:ellipsize="end" android:gravity="left" android:id="@id/message_item_unsupport_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unsupport_title" android:singleLine="true" />
        <TextView android:textSize="13.0sp" android:textColor="@color/color_grey_555555" android:ellipsize="end" android:gravity="left" android:id="@id/message_item_unsupport_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/unsupport_desc" android:singleLine="true" />
    </LinearLayout>
</RelativeLayout>