<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/partial_action_bar" />
    <LinearLayout android:background="@android:color/white" android:layout_marginTop="@dimen/regular_dimen_x5" style="@style/MatchWrap.Vertical">
        <View style="@style/normal_line_vertical" />
        <LinearLayout android:gravity="center_vertical" android:paddingLeft="@dimen/regular_dimen_x15" android:paddingRight="@dimen/regular_dimen_x15" style="@style/MatchWrap.Horizontal">
            <TextView android:text="登录密码" style="@style/normal_tx_theme" />
            <EditText android:id="@id/etPass" android:background="@android:color/transparent" android:paddingLeft="@dimen/regular_dimen_x15" android:paddingTop="@dimen/edt_padding_small" android:paddingBottom="@dimen/edt_padding_small" android:layout_marginRight="@dimen/regular_dimen_x15" android:hint="@string/user_hint_pass" android:password="true" android:maxLength="16" style="@style/normal_edt_theme" />
        </LinearLayout>
        <View style="@style/normal_line_vertical" />
        <LinearLayout android:paddingLeft="@dimen/regular_dimen_x15" android:paddingRight="@dimen/regular_dimen_x15" style="@style/MatchWrap.Horizontal">
            <TextView android:text="确认密码" style="@style/normal_tx_theme" />
            <EditText android:id="@id/etSure" android:background="@android:color/transparent" android:paddingLeft="@dimen/regular_dimen_x15" android:paddingTop="@dimen/edt_padding_small" android:paddingBottom="@dimen/edt_padding_small" android:hint="@string/user_hint_sure_pass" android:password="true" android:maxLength="16" style="@style/normal_edt_theme" />
        </LinearLayout>
        <View style="@style/normal_line_vertical" />
    </LinearLayout>
    <Button android:id="@id/btnFinish" android:background="@drawable/btn_theme" android:layout_marginLeft="@dimen/regular_dimen_x15" android:layout_marginTop="@dimen/regular_dimen_x40" android:layout_marginRight="@dimen/regular_dimen_x15" android:text="@string/user_btn_finish" style="@style/normal_btn_theme" />
</LinearLayout>