<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/textMessageLayout" android:background="@drawable/nim_message_view_bottom" android:paddingTop="@dimen/bottom_component_margin_vertical" android:paddingBottom="@dimen/bottom_component_margin_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/switchLayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/bottom_component_margin_horizontal" android:layout_marginRight="@dimen/bottom_component_margin_horizontal" android:layout_alignBottom="@id/editTextMessage">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/buttonAudioMessage" android:background="@drawable/btn_microphone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center" android:contentDescription="@string/empty" />
        <ImageView android:layout_gravity="center_vertical" android:id="@id/buttonTextMessage" android:background="@drawable/btn_keyboard" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center" android:contentDescription="@string/empty" />
    </FrameLayout>
    <Button android:textSize="16.0sp" android:textColor="@color/color_black_333333" android:gravity="center" android:autoLink="email|phone|web" android:id="@id/audioRecord" android:background="@drawable/btn_white" android:paddingTop="@dimen/regular_dimen_x6" android:paddingBottom="@dimen/regular_dimen_x6" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="@dimen/bottom_component_margin_horizontal" android:minHeight="0.0dip" android:text="@string/record_audio" android:layout_toLeftOf="@id/emoji_button" android:layout_toRightOf="@id/switchLayout" android:layout_alignBottom="@id/switchLayout" style="@style/edit_text_style" />
    <EditText android:textSize="15.0sp" android:autoLink="email|phone|web" android:id="@id/editTextMessage" android:background="@drawable/et_white" android:paddingLeft="@dimen/regular_dimen_x10" android:paddingTop="@dimen/regular_dimen_x5" android:paddingRight="@dimen/regular_dimen_x10" android:paddingBottom="@dimen/regular_dimen_x6" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="@dimen/bottom_component_margin_horizontal" android:maxHeight="72.0dip" android:minHeight="0.0dip" android:maxLines="4" android:layout_toLeftOf="@id/emoji_button" android:layout_toRightOf="@id/switchLayout" style="@style/edit_text_style" />
    <ImageView android:id="@id/emoji_button" android:background="@drawable/btn_expression" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/bottom_component_margin_horizontal" android:scaleType="center" android:layout_toLeftOf="@id/sendLayout" android:layout_alignBottom="@id/switchLayout" android:contentDescription="@string/empty" />
    <FrameLayout android:id="@id/sendLayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/bottom_component_margin_horizontal" android:layout_alignBottom="@id/switchLayout" android:layout_alignParentRight="true">
        <ImageView android:layout_gravity="center" android:id="@id/buttonMoreFuntionInText" android:background="@drawable/btn_more" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center" android:contentDescription="@string/empty" />
        <TextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/buttonSendMessage" android:background="@drawable/btn_theme" android:paddingLeft="@dimen/regular_dimen_x10" android:paddingTop="@dimen/regular_dimen_x5" android:paddingRight="@dimen/regular_dimen_x10" android:paddingBottom="@dimen/regular_dimen_x5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/send" android:contentDescription="@string/empty" />
    </FrameLayout>
</RelativeLayout>